2.24.2:

2008-12-20  Armin Burgmeier  <armin@openismus.com>

	* libxml++/schema.cc (set_document): Set embedded_doc_ according to
	the embed parameter instead of always setting it to false, so that we
	actually release the document in release_underlying().
	(release_underlying): Free the schema in all cases, also when the
	document was not embedded, to avoid a memory leak.

	* libxml++/validators/schemavalidator.cc (parse_file, parse_memory,
	parse_document): Make sure not to leak the xmlSchemaParserCtxtPtr in
	case of an exception. Bug #563321, Arjan Franzen.

2008-12-18  Armin Burgmeier  <armin@openismus.com>

	* win32_msvc6/:
	* Makefile.am:
	* configure.in: Removed outdated MSVC6 project.

2.24.1:

2008-12-12  Armin Burgmeier  <armin@openismus.com>

	* MSVC_Net2008/examples/sax_parser/sax_parser.vcproj.HALLWA.Armin.user:
	Removed this generated file. It went in by accident.

	* MSVC_Net2008/examples/sax_parser/sax_parser.vcproj: Added the
	example project file instead, which should have been added from the
	beginning.

2008-12-12  Armin Burgmeier  <armin@openismus.com>

	* MSVC_Net2005/libxml++/libxml++.vcproj:
	* MSVC_Net2008/libxml++/libxml++.vcproj: Added schema.cc and
	schemavalidator.cc to the project. Bug #563664 (Arjan Franzen).

	* MSVC_Net2005/examples/schemavalidation/schemavalidation.vcproj:
	* MSVC_Net2005/examples/schemavalidation/Makefile.am:
	* MSVC_Net2005/examples/Makefile.am:
	* MSVC_Net2005/libxml++.sln: Added the schema validator example to the
	MSVC8 solution file.

	* MSVC_Net2008/examples/schemavalidation/schemavalidation.vcproj:
	* MSVC_Net2008/examples/schemavalidation/Makefile.am:
	* MSVC_Net2008/examples/Makefile.am:
	* MSVC_Net2008/libxml++.sln: Added the schema validator example to the
	MSVC9 solution file.

2008-12-12  Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	* libxml++/schema.cc: Fix a typo to fix the build.

2008-12-08  Murray Cumming  <murrayc@murrayc.com>
